--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-language-selector-lite",
-  "version": "1.0.9",
+  "version": "1.1.0",
   "description": "A lightweight language selector for React applications",
   "main": "dist/LanguageSelector.js",
   "scripts": {
@@ -22,6 +22,14 @@
     "select-language",
     "react-component"
   ],
+  "Repository": {
+    "type": "github",
+    "url": "https://github.com/jamiushaibu/react-language-selector-lite.git"
+  },
+  "Home": {
+    "type": "url",
+    "url": "https://github.com/jamiushaibu/react-language-selector-lite.git"
+  },
   "dependencies": {
     "langs": "^2.0.0",
     "prop-types": "^15.8.1",
