--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-language-selector-lite",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "A lightweight language selector for React applications",
   "main": "dist/LanguageSelector.js",
   "scripts": {
@@ -22,14 +22,11 @@
     "select-language",
     "react-component"
   ],
-  "Repository": {
-    "type": "github",
+  "repository": {
+    "type": "git",
     "url": "https://github.com/jamiushaibu/react-language-selector-lite.git"
   },
-  "Home": {
-    "type": "url",
-    "url": "https://github.com/jamiushaibu/react-language-selector-lite.git"
-  },
+  "homepage": "https://github.com/jamiushaibu/react-language-selector-lite.git",
   "dependencies": {
     "langs": "^2.0.0",
     "prop-types": "^15.8.1",
