--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-language-selector-lite",
-  "version": "1.1.7",
+  "version": "1.1.90",
   "description": "A lightweight language selector for React applications",
   "main": "dist/LanguageSelector.js",
   "types": "src/index.d.ts",
@@ -16,13 +16,21 @@
   "author": "Jamiu Shaibu",
   "keywords": [
     "react",
+    "langs",
     "language-selector",
     "language",
+    "languages",
+    "iso",
     "i18n",
     "internationalization",
     "localization",
     "select-language",
-    "react-component"
+    "react-component",
+    "639",
+    "639-1",
+    "639-2",
+    "639-3",
+    "iso639"
   ],
   "repository": {
     "type": "git",
